Deleted XDebug code (#205)